fix issue with wrong width of the notification__link-avatar: sometimes it was narrower than it should be

--- a/src/app/notification/menu/common/notification-item.scss
+++ b/src/app/notification/menu/common/notification-item.scss
@@ -46,7 +46,9 @@
 
   &__link-avatar {
     width: 35px;
+    min-width: 35px;
     height: 35px;
+    min-height: 35px;
     display: block;
   }
 
